data/derived/sp14/progs/unify/prog0609.ml.out
Characters 73-77:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         int -> int
